# umbra-py

./: .dockerignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  TODO.md  docker-compose.yml  docker-entrypoint.sh  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  docs.yml  live-canary.yml  publish-index.yml  release.yml  security-audit.yml
docs/: AI_INTEGRATION_IDEAS.md  CODEBASE_ANALYSIS.md  DEMO_APP_GAPS.md  STRATEGY.md  umbra-value-notes.md
docs/schemas/: README.md  download.schema.json  error.schema.json  index-info.schema.json  render-manifest.schema.json
docs_src/: cli.md  deploy.md  index.md  install.md  quickstart.md
docs_src/guides/: notebooks.md
docs_src/reference/: ai.md  catalog.md  chips.md  convert.md  download.md  exceptions.md  index.md  load.md  models.md  terrain.md  viz.md
examples/: 01_hello_umbra.ipynb  02_download_and_open_gec.ipynb  03_change_detection.ipynb  04_amplitude_time_series.ipynb  05_detection_chips.ipynb  06_site_monitoring.ipynb  07_sicd_amplitude.ipynb  README.md  ccd.md  change.md  gallery.md  load.md  maps.md  quicklook.md  swipe.md
examples/baseline/: 01_search_catalog_pystac.py  02_search_catalog_handrolled.py  03_find_the_geotiff.py  04_download_assets.py  05_open_sicd.py  06_with_umbra_py.py
src/umbra_py/: __init__.py  _geometry.py  _html.py  _http.py  _lazy_imagery.py  catalog.py  ccd.py  chips.py  cli.py  constants.py  context.py  convert.py  dates.py  dem.py  demo.py  describe.py  download.py  embed.py  exceptions.py  export.py  fuzzy.py  geocode.py  geoid.py  index.py  langchain.py  llamaindex.py  llms_txt.py  load.py  mcp_server.py  models.py  narrate.py  planner.py  pmtiles.py  semantic.py  serve.py  showcase.py  viewer.py  viz.py  watch.py
tests/: conftest.py  test_acquisition_filters.py  test_canopy.py  test_catalog.py  test_ccd.py  test_chips.py  test_citation.py  test_cli_json.py  test_cli_token.py  test_context.py  test_convert.py  test_dates.py  test_dem.py  test_demo.py  test_describe.py  test_download.py  test_embed.py  test_errors.py  test_examples.py  test_export.py  test_fuzzy.py  test_geocode.py  test_geoid.py  test_geometry.py  test_html.py  test_http.py  test_index.py  test_langchain.py  test_lazy_imagery.py  test_live.py  test_llamaindex.py  test_llms_txt.py  test_load.py  test_mcp_server.py  test_models.py  test_narrate.py  test_planner.py  test_pmtiles.py  test_semantic.py  test_serve.py  (+4 more)
tests/data/: sample_item.json
