[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "umbra-py"
version = "0.1.0"
description = "A Python-first toolkit to make Umbra SAR open data easy to discover, load, download, and analyze."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "umbra-py contributors" }]
keywords = [
    "sar",
    "synthetic-aperture-radar",
    "umbra",
    "remote-sensing",
    "earth-observation",
    "stac",
    "geospatial",
    "gis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "requests>=2.28",
    "click>=8.1",
]

[project.optional-dependencies]
convert = ["sarpy>=1.3", "rasterio>=1.3", "numpy>=1.23"]
load = ["xarray>=2023.1", "rasterio>=1.3", "numpy>=1.23"]
viz = ["folium>=0.14", "matplotlib>=3.6", "rasterio>=1.3", "numpy>=1.23"]
export = ["stac-geoparquet>=0.6"]
serve = ["fastapi>=0.110", "uvicorn>=0.27"]
mcp = ["mcp>=1.2", "umbra-py[viz]"]
# `umbra ask` calls a model to *plan* a search (the library still executes it
# deterministically). It talks to Anthropic or any OpenAI-compatible endpoint
# over plain HTTPS with the already-core `requests`, plus a user-supplied API
# key at runtime — no heavy SDK. The extra exists as the documented install
# target and the marker of the determinism boundary (AI is opt-in, never
# implicit); it pulls in nothing beyond the core dependency it relies on.
ai = ["requests>=2.28"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]
all = ["umbra-py[convert,load,viz,export]"]

[project.urls]
Homepage = "https://github.com/theminiverse/umbra-py"
Repository = "https://github.com/theminiverse/umbra-py"
Issues = "https://github.com/theminiverse/umbra-py/issues"
"Umbra Open Data" = "https://umbra.space/open-data/"

[project.scripts]
umbra = "umbra_py.cli:main"
umbra-py = "umbra_py.cli:main"
umbra-mcp = "umbra_py.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/umbra_py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency/parameter markers are called in argument defaults by
# design (Query(...), Body(...)); that is the framework idiom, not a B008 bug.
extend-immutable-calls = ["fastapi.Query", "fastapi.Body", "fastapi.Path", "fastapi.Depends"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require live network access to Umbra's public catalog",
]
addopts = "-m 'not network'"
