[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "umbra-py"
dynamic = ["version"]
description = "A Python-first toolkit to make Umbra SAR open data easy to discover, load, download, and analyze."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "umbra-py contributors" }]
keywords = [
    "sar",
    "synthetic-aperture-radar",
    "umbra",
    "remote-sensing",
    "earth-observation",
    "stac",
    "geospatial",
    "gis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "requests>=2.28",
    "click>=8.1",
]

[project.optional-dependencies]
convert = ["sarpy>=1.3", "rasterio>=1.3", "numpy>=1.23"]
load = ["xarray>=2023.1", "rasterio>=1.3", "numpy>=1.23"]
viz = ["folium>=0.14", "matplotlib>=3.6", "rasterio>=1.3", "numpy>=1.23"]
export = ["stac-geoparquet>=0.6"]
serve = ["fastapi>=0.110", "uvicorn>=0.27"]
mcp = ["mcp>=1.2", "umbra-py[viz]"]
# The AI features call a model at the edge while the library stays
# deterministic: `umbra ask` has a model *plan* a search (re-validated before it
# runs), `umbra describe` has a vision model *read* a rendered quicklook
# (returned as a provenance-stamped description, never a filter), and `umbra
# embed` turns a quicklook (or a text query) into a vector for visual similarity
# search (only the embedding step calls a model; ranking is deterministic). All
# talk to Anthropic or any OpenAI-compatible endpoint over plain HTTPS with the
# already-core `requests`, plus a user-supplied API key at runtime — no heavy
# SDK. The extra exists as the documented install target and the marker of the
# determinism boundary (AI is opt-in, never implicit); it pulls in nothing
# beyond the core dependency it relies on. `umbra describe` and `umbra embed`
# additionally need the `viz` extra to render the quicklook they embed/send.
ai = ["requests>=2.28"]
# The catalog tools as native LangChain / LangGraph tools (`umbra_py.langchain`).
# Only `langchain-core` — the lightweight tool/abstraction package, not the full
# framework — plus `viz` for the render tools' PNGs. It mirrors the `mcp` extra:
# a second front door for agent builders over the identical deterministic
# callables, so the two surfaces cannot drift.
langchain = ["langchain-core>=0.3", "umbra-py[viz]"]
# The catalog tools as native LlamaIndex tools (`umbra_py.llamaindex`). Only
# `llama-index-core` — the lightweight tool/abstraction package, not the full
# framework — plus `viz` for the render tools' PNGs. It mirrors the `mcp` /
# `langchain` extras: a third front door for agent builders over the identical
# deterministic callables, so the three surfaces cannot drift.
llamaindex = ["llama-index-core>=0.11", "umbra-py[viz]"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]
# The rendered documentation site (mkdocs-material + mkdocstrings), built from
# the same docstrings the package already ships. `mkdocs-click` renders the CLI
# reference straight from the Click group so the docs cannot drift from `umbra
# --help`. Building the API reference imports the package, so this extra is
# installed alongside `[all]` (and the agent extras) in the docs workflow.
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-click>=0.8",
]
all = ["umbra-py[convert,load,viz,export]"]

[project.urls]
Homepage = "https://github.com/reesehammer/umbra-py"
Repository = "https://github.com/reesehammer/umbra-py"
Issues = "https://github.com/reesehammer/umbra-py/issues"
"Umbra Open Data" = "https://umbra.space/open-data/"

[project.scripts]
umbra = "umbra_py.cli:main"
umbra-py = "umbra_py.cli:main"
umbra-mcp = "umbra_py.mcp_server:main"

# Single-source the version from the package so it can never drift from
# `__version__` (the value `umbra.__version__` and `umbra --version` report).
[tool.hatch.version]
path = "src/umbra_py/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/umbra_py"]
# Ship the PEP 561 marker so downstream type checkers consume the inline types.
artifacts = ["src/umbra_py/py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency/parameter markers are called in argument defaults by
# design (Query(...), Body(...)); that is the framework idiom, not a B008 bug.
extend-immutable-calls = ["fastapi.Query", "fastapi.Body", "fastapi.Path", "fastapi.Depends"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require live network access to Umbra's public catalog",
]
addopts = "-m 'not network'"
